2006-08-01  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/push.py: now the number of pushed revisions gets
      displayed (Fixed: #54698)
    * olive/backend/info.py: added is_checkout()
    * olive/frontend/gtk/commit.py: local commit checkbox shows up only if the
      current directory is a checkout
    * olive/backend/fileops.py: upgraded to new API (compare_trees deprecated)
    * many files: the cursor changes to a watch when performing time consuming
      operations (Fixed: #54015)

2006-07-31  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * Back from holiday.
    * olive.glade: separated branch and checkout dialogs (Fixed: #54019)
    * olive/frontend/gtk/checkout.py: file added respectively
    * olive/frontend/gtk/branch.py: removed checkout options
    * olive/frontend/gtk/handler.py: modified handler names + added checkout
    * olive/frontend/gtk/push.py: window gets properly resized (Fixed: #54676)

2006-07-25  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive-gtk: display error if python 2.4 not available (Mario Đanić)
      (Fixed: #54014)
    * olive-gtk: display error if pygtk2 (and glade) not available (Mario Đanić)
      (Fixed: #54013)

2006-07-24  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/push.py: display number of pushed revisions
    * olive.glade: improvements to the Commit dialog
    * olive/frontend/gtk/commit.py: merged Jelmer Vernooij's integration branch
      and some code from bzr-gtk (select files to commit)
    * TODO: added some wishlist stuff

2006-07-21  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/olive.glade: some UI refreshment (push, remove and commit dialog)
    * olive/frontend/gtk/push.py: implemented 'push' functionality
    * olive/frontend/gtk/commit.py: implemented 'commit' functionality
    * olive/frontend/gtk/remove.py: implemented 'remove' functionality